Updated syllabus inst Updated date and time wrap Minor fixes and updates

--- a/src/assets/css/generator.css
+++ b/src/assets/css/generator.css
@@ -19,7 +19,7 @@ table.syllabus-tbl td {
 }
 
 table.syllabus-tbl ul {
-  padding-left: 40px;
+  padding-left: 24px;
 }
 
 .tbl-img {
