--- a/src/assets/css/syllabus.css
+++ b/src/assets/css/syllabus.css
@@ -1,11 +1,12 @@
 .syllabus-pdf-viewer {
   width: 100%;
-  height: 450px;
+  height: 480px;
 }
 
 .syllabus-container-large {
-  height: 420px;
+  height: 480px;
   overflow: scroll;
+  padding: 32px 32px 64px;
   background-color: #ccc;
 }
 
@@ -17,11 +18,14 @@
 .syllabus-inst {
   background-color: white;
   font-family: 'Times New Roman', Times, serif;
+  font-size: 16px;
+  margin: 32px auto 0;
 }
 
 .syllabus-inst table {
   width: 100%;
   border-collapse: collapse;
+  line-height: 1.15;
 }
 
 .syllabus-inst table th {
@@ -30,12 +34,16 @@
 }
 
 .syllabus-inst table th {
+  text-align: center;
+}
+
+.syllabus-inst table th.th-left {
   text-align: left;
 }
 
 .syllabus-inst table th,
 .syllabus-inst table td {
-  padding: 2px 8px
+  padding: 2px 8px !important;
 }
 
 .syllabus-inst {
